[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for dbt-data-privacy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytz>=2015.7",
    "nox>=2024.10.9",
]

[dependency-groups]
dbt-core-1-10 = [
    "dbt-core>=1.10,<1.11",
    "dbt-bigquery>=1.10,<1.11",
]
dbt-core-1-11 = [
    "dbt-core>=1.11,<1.12",
    "dbt-bigquery>=1.11,<1.12",
]

[tool.uv]
conflicts = [
    [
        { group = "dbt-core-1-10" },
        { group = "dbt-core-1-11" },
    ],
]

[tool.setuptools]
# Prevent setuptools from trying to build dbt folders as Python packages
packages = []
